sinalcabo/force-app/main/default/objects/Contador_Proposta__c/Contador_Proposta__c.object-meta.xml
<CustomObject>
    <description>SinalCabo (B.4) - contador da numeracao de propostas. Uma linha por sigla de unidade e ano civil, com o ultimo numero emitido. A serie reinicia sozinha a 1 de Janeiro porque a mudanca de ano cria uma linha nova, sem tarefa anual nenhuma. E&apos; esta linha que o Apex tranca com FOR UPDATE para dois utilizadores nao receberem o mesmo numero.</description>
    <label>Contador de Propostas</label>
    <nameField>
        <label>Contador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contadores de Propostas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>