sinalcabo/force-app/main/default/objects/Contador_Proposta__c/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Permite travar a emissao de numeros nesta unidade e ano sem apagar o contador. Com isto a false, as oportunidades dessa area passam a nascer sem numero, e fica registado o motivo.</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>