sinalcabo/force-app/main/default/objects/Contador_Proposta__c/fields/Ano__c.field-meta.xml
<CustomField>
    <fullName>Ano__c</fullName>
    <description>Ano civil a que esta serie pertence, com quatro digitos. O numero da proposta mostra so&apos; os dois ultimos.</description>
    <label>Ano</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>