sinalcabo/force-app/main/default/objects/Contador_Proposta__c/fields/Chave__c.field-meta.xml
<CustomField>
    <fullName>Chave__c</fullName>
    <description>Sigla da unidade e ano civil, no formato SIGLA|AAAA. Unica e External Id: garante uma so&apos; linha de contador por unidade e por ano, e e&apos; por aqui que o Apex encontra a linha a trancar. Nao editar a mao.</description>
    <externalId>true</externalId>
    <label>Chave</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>