sinalcabo/force-app/main/default/objects/Contador_Proposta__c/fields/Sigla__c.field-meta.xml
<CustomField>
    <fullName>Sigla__c</fullName>
    <description>Sigla da unidade de negocio, como o cliente a definiu no organograma (ex. UN SOLAR, DN FM). Vem do Custom Metadata SC_Area_Sigla, que faz a correspondencia entre a area de negocio do CRM e a sigla.</description>
    <label>Sigla da Unidade</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>