sinalcabo/force-app/main/default/objects/Contador_Proposta__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Sigla__c</columns>
    <columns>Ano__c</columns>
    <columns>Ultimo_Numero__c</columns>
    <columns>Activo__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>